# imai

./: LICENSE  README.md  index.html
maimai-data/: ContentView.swift  maimai_dataApp.swift
maimai-data.xcodeproj/: project.pbxproj
maimai-data/Assets.xcassets/Colors/advanced.colorset/: Contents.json
maimai-data/Assets.xcassets/Colors/basic.colorset/: Contents.json
maimai-data/Assets.xcassets/Colors/expert.colorset/: Contents.json
maimai-data/Models/: AppUpdate.swift  ChartsResponse.swift  DifficultyType.swift  DsSongData.swift  MaxNotesStats.swift  Rating.swift  RecordDTO.swift  SongDataDTO.swift  SongFilter.swift
maimai-data/Network/: MaimaiDataClient.swift  MaimaiDataService.swift  WahlapService.swift
maimai-data/Persistence/: Alias.swift  Chart.swift  ChartStats.swift  DataManager.swift  DatabaseActor.swift  Record.swift  SongData.swift
maimai-data/Utils/: AppPreferences.swift  Constants.swift  ConvertUtils.swift  JsonConvertToDb.swift  RatingCalculator.swift  SongSearcher.swift
maimai-data/Views/: CachedJacketView.swift  ChecklistView.swift  FinaleToDxView.swift  LoginView.swift  ProberView.swift  RatingView.swift  RecordMark.swift  SearchFilterView.swift  SettingsView.swift  SongDetailView.swift  SongListView.swift  VersionChecklistView.swift  WeChatUpdateView.swift
server/: Cargo.toml
server/migrations/: 001_create_tasks.sql
server/src/: config.rs  db.rs  fetcher.rs  main.rs  models.rs  oauth.rs  wahlap.rs
server/src/api/: create_task.rs  get_task.rs  mod.rs  wechat_entry.rs
server/src/proxy/: mod.rs  socks5.rs  tls.rs
(+16 files in other folders)
