[package]
name = "maimai-data-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "trace"] }

sqlx = {
  version = "0.9",
  features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"]
}

serde = { version = "1", features = ["derive"] }
serde_json = "1"

cookie_store = "0.21"
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v7"] }

rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

fast-socks5 = "1"

url = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

anyhow = "1"
